add Swagger UI
