# api/swagger.yaml
@@ -1,198 +1,222 @@
-openapi: 3.0.0
+basePath: /
+definitions:
+  handlers.SongData:
+    properties:
+      group:
+        type: string
+      link:
+        type: string
+      releaseDate:
+        type: string
+      song:
+        type: string
+      text:
+        type: string
+    type: object
+host: localhost:8080
 info:
-  title: Music API
+  contact: {}
   description: API for managing the list of songs and lyrics
+  title: Music API
   version: 1.0.0
-servers:
-  - url: http://localhost:8080
 paths:
   /songs:
-    get:
-      summary: Get a list of songs
-      description: Get a list of songs based on the filtering parameters
-      parameters:
-        - name: song
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "Roads"
-        - name: group
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "Portishead"        
-        - name: releasedate
-          in: query
-          required: false
-          schema:
-            type: string
-            format: date
-            example: "17.08.2024"
-        - name: text
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "Oh\nCan't anybody see\nWe've got a war to fight\nNever find our way\nRegardless of what they say" 
-        - name: link
-          in: query
-          required: false
-          schema:
-            type: string
-            example: "https://www.youtube.com/watch?v=Vg1jyL3cr60"          
-        - name: page
-          in: query
-          required: false
-          schema:
-            type: integer
-            example: 1
-        - name: onpage
-          in: query
-          required: false
-          schema:
-            type: integer
-            example: 5
-      responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    song:
-                      type: string
-                      example: "Roads"
-                    group:
-                      type: string
-                      example: "Portishead"
-                    releaseDate:
-                      type: string
-                      format: date
-                      example: "12.08.1997"
-                    text:
-                      type: string
-                      example: "Oh\nCan't anybody see\nWe've got a war to fight\nNever find our way\nRegardless of what they say"
-                    link:
-                      type: string
-                      example: "https://www.youtube.com/watch?v=Vg1jyL3cr60"
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-    post:
-      description: Add new song
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                song:
-                  type: string
-                  example: "Roads"
-                group:
-                  type: string
-                  example: "Portishead"
-
-      responses:
-        '200':
-          description: OK
-        '400':
-          description: Bad request
-        '500':
-          description: Internal server error
-    patch:
-      description: Update song data
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                song:
-                  type: string
-                  example: "Roads"
-                group:
-                  type: string
-                  example: "Portishead"
-                releasedate:
-                  type: string
-                  format: date
-                  example: "17.03.2005"
-                text:
-                  type: string
-                  example: "Updated text"
-                link:
-                  type: string
-                  example: "https://www.youtube.com/watch?v=7x4xsJcFI3M"
-      responses:
-        '200':
-          description: Ok
-        '400':
-          description: Bad request
-        '404':
-          description: Not found
-        '500':
-          description: Internal server error
     delete:
-      description: Delete song
+      consumes:
+      - application/json
+      description: Delete a song from the database.
       parameters:
-        - name: song
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: group
-          in: query
-          required: true
-          schema:
-            type: string
+      - description: Song name
+        in: query
+        name: song
+        required: true
+        type: string
+      - description: Group name
+        in: query
+        name: group
+        required: true
+        type: string
+      produces:
+      - application/json
       responses:
-        '200':
-          description: Ok
-        '400':
+        "200":
+          description: Song deleted
+          schema:
+            type: string
+        "400":
           description: Bad request
-        '404':
-          description: Not found
-        '500':
+          schema:
+            type: string
+        "404":
+          description: Song not found
+          schema:
+            type: string
+        "500":
           description: Internal server error
+          schema:
+            type: string
+      summary: Delete a song
+      tags:
+      - songs
+    get:
+      consumes:
+      - application/json
+      description: Get a list of songs based on filtering parameters.
+      parameters:
+      - description: Song name
+        in: query
+        name: song
+        type: string
+      - description: Group name
+        in: query
+        name: group
+        type: string
+      - description: Release date
+        in: query
+        name: releasedate
+        type: string
+      - description: Song lyrics
+        in: query
+        name: text
+        type: string
+      - description: Video link
+        in: query
+        name: link
+        type: string
+      - description: Page number
+        in: query
+        name: page
+        type: integer
+      - description: Items per page
+        in: query
+        name: onpage
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of songs
+          schema:
+            items:
+              $ref: '#/definitions/handlers.SongData'
+            type: array
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Get a list of songs
+      tags:
+      - songs
+    patch:
+      consumes:
+      - application/json
+      description: Update song information in the database.
+      parameters:
+      - description: Song data to update
+        in: body
+        name: song
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.SongData'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Song updated
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "404":
+          description: Song not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Update song data
+      tags:
+      - songs
+    post:
+      consumes:
+      - application/json
+      description: Add a new song to the database.
+      parameters:
+      - description: Song name
+        in: query
+        name: song
+        type: string
+      - description: Group name
+        in: query
+        name: group
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Song added successfully
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Add a new song
+      tags:
+      - songs
   /text:
     get:
-      description: Get song text
+      consumes:
+      - application/json
+      description: Get the lyrics of a song by its name and group.
       parameters:
-        - name: song
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: group
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: verse
-          in: query
-          required: false
-          schema:
-            type: int
+      - description: Song name
+        in: query
+        name: song
+        required: true
+        type: string
+      - description: Group name
+        in: query
+        name: group
+        required: true
+        type: string
+      - description: Verse number
+        in: query
+        name: verse
+        type: integer
+      produces:
+      - application/json
       responses:
-        '200':
-          description: Ok
-          content:
-            application/json:
-              schema:
-                type: string
-                example: "Oh\nCan't anybody see\nWe've got a war to fight\nNever find our way\nRegardless of what they say"
-        '400':
+        "200":
+          description: Song lyrics
+          schema:
+            type: string
+        "400":
           description: Bad request
-        '404':
-          description: Not found
-        '500':
+          schema:
+            type: string
+        "404":
+          description: Song not found
+          schema:
+            type: string
+        "500":
           description: Internal server error
+          schema:
+            type: string
+      summary: Get song lyrics
+      tags:
+      - text
+schemes:
+- http
+swagger: "2.0"
