# cmd/main.go
@@ -1,19 +1,32 @@
 package main
 
 import (
+	"fmt"
 	"log"
 	"music/internal/database"
-	"music/internal/server"
+	"music/internal/handlers"
 	"music/mock"
 	"music/tools"
+	"net/http"
 	"os"
+
+	_ "music/api"
 
 	"github.com/golang-migrate/migrate/v4"
 	"github.com/golang-migrate/migrate/v4/database/postgres"
 	_ "github.com/golang-migrate/migrate/v4/source/file"
 	_ "github.com/lib/pq"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
+// @title           Music API
+// @version         1.0.0
+// @description     API for managing the list of songs and lyrics
+// @host            localhost:8080
+// @BasePath        /
+// @schemes         http
+// @accepts         json
+// @produces        json
 func main() {
 
 	// Получаем настройки приложения
@@ -57,6 +70,14 @@ func main() {
 	if config.MusicInfoAddr == "mock" {
 		go mock.RunServer()
 	}
+
 	// Запускаем сервер приложения
-	server.RunServer()
+	serverAddr := config.ServerAddr
+	http.HandleFunc("/swagger/*", httpSwagger.WrapHandler)
+	http.HandleFunc("/songs", handlers.SongsHandler)
+	http.HandleFunc("/text", handlers.TextHandler)
+	tools.Logger.Info(fmt.Sprintf("Starting server on %s", serverAddr))
+	err = http.ListenAndServe(serverAddr, nil)
+	tools.Logger.Fatal("Server is down: ", err)
+
 }
